objects/RIT_ProjectInformation__c.object
<CustomObject>
    <fields>
        <fullName>BidAwardDate__c</fullName>
        <description>Quote Approval – Formula to display the Closed Date of the related Opportunity.</description>
        <formula>QuoteLink__r.OpportunityName__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BidReferenceN__c</fullName>
        <description>Quote Approval –Bid Reference N° populated from Quote Link&apos;s &quot;Quote Ref Number in Legacy&quot;</description>
        <label>Quote Reference N°</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BidSubmissionDate__c</fullName>
        <description>Quote Approval – Formula to display the Quote Submission Date of the related Opportunity.</description>
        <formula>QuoteLink__r.OpportunityName__r.QuoteSubmissionDate__c</formula>
        <inlineHelpText>Quote = Bid = Tender</inlineHelpText>
        <label>Quote Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <description>Quote Approval – Formula to display the name of the related Account.</description>
        <formula>QuoteLink__r.OpportunityName__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Quote Approval – Formula to display the country of the related Opportunity.</description>
        <formula>QuoteLink__r.OpportunityName__r.CountryOfDestination__r.Name</formula>
        <label>Country Of Destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Quote Approval – Department of Project Information</description>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationOfTheProjectInMonths__c</fullName>
        <description>Quote Approval –Duration Of The Project In Months for Project Information.</description>
        <inlineHelpText>From coming in to force until completion of execution (e.g. PAC, FCA, etc.)</inlineHelpText>
        <label>Duration Of The Project In Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndUserCustomer__c</fullName>
        <formula>QuoteLink__r.OpportunityName__r.EndUserCustomer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End-User Account-Investor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>Quote Approval - Formula to display the Sales Entity of the related Opportunity.</description>
        <formula>QuoteLink__r.OpportunityName__r.SalesEntity__r.Name</formula>
        <label>Sales Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Quote Approval –- Formula to display the Creator of the related Quote Link</description>
        <formula>QuoteLink__r.Owner:User.FirstName+  &apos; &apos;+  QuoteLink__r.Owner:User.LastName</formula>
        <label>Quote Link Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalPresentation__c</fullName>
        <description>Quote Approval – Global Presentation for Project Information.</description>
        <inlineHelpText>Please Describe Hereafter The Main Characteristics Of The Project, Notably:
 - Global Presentation
 - Environment, Competition
 - Resources To Be Mobilized
 - Risks/Opportunities For SE To Quote</inlineHelpText>
        <label>Global Presentation</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsThisAnExportOrLocalProject__c</fullName>
        <description>Quote Approval – Is This An Export Or Local Project? for Project Information.</description>
        <label>Is This An Export Or Local Project?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadingBU__c</fullName>
        <description>Holds the Leading BU</description>
        <formula>Case(QuoteLink__r.OpportunityName__r.LeadingBusiness__c,
&quot;BD&quot;, &quot;EcoBuildings&quot;,
&quot;EN&quot;, &quot;Energy&quot;,
&quot;GS&quot;, &quot;Global Solutions&quot;,
&quot;GW&quot;, &quot;Software&quot;,
&quot;ID&quot;, &quot;Industry&quot;,
&quot;IT&quot;, &quot;IT&quot;,
&quot;PP&quot;, &quot;Partner Projects&quot;,
&quot;PR&quot;, &quot;Retail&quot;,
&quot;PS&quot;, &quot;Energy and Sustainablity&quot;,
&quot;IA&quot;, &quot;Process Automation&quot;,
&quot;IB&quot;, &quot;Industry OEM-BIC&quot;,
&quot;SO&quot;, &quot;Solar&quot;,
&quot;BI&quot;,&quot;Building &amp; IT&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leading Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <description>Holds the Market Segment</description>
        <formula>CASE(QuoteLink__r.OpportunityName__r.MarketSegment__c, 
&quot;BD1&quot;, &quot;Wholesale &amp; Retail Trade&quot;,
&quot;BD3&quot;, &quot;Hotels&quot;,
&quot;BD4&quot;, &quot;Healthcare&quot;,
&quot;BD9&quot;, &quot;Education &amp; Research&quot;,
&quot;BDR&quot;, &quot;Real Estate&quot;,
&quot;BDZ&quot;, &quot;Industrial Buildings and Commercial&quot;,
&quot;EN1&quot;, &quot;Electric Utilities&quot;,
&quot;EN2&quot;, &quot;Oil, Gas &amp; Petrochemicals&quot;,
&quot;EN3&quot;, &quot;Transportation&quot;,
&quot;ID1&quot;, &quot;Machinery&quot;,
&quot;ID2&quot;, &quot;Water&quot;,
&quot;ID3&quot;, &quot;MMM&quot;,
&quot;ID4&quot;, &quot;Food &amp; Beverage&quot;,
&quot;ID5&quot;, &quot;Automotive &amp; E-Mobility&quot;,
&quot;ID6&quot;, &quot;Household &amp; Personal Care&quot;,
&quot;ID7&quot;, &quot;Semiconductor&quot;,
&quot;IDZ&quot;, &quot;Industrial Manufacturing and Commercial&quot;,
&quot;IT1&quot;, &quot;IT Equipment and Professional Services&quot;,
&quot;IT2&quot;, &quot;Finance&quot;,
&quot;IT3&quot;, &quot;Cloud&amp; Serivce providers&quot;,
&quot;PW1&quot;, &quot;Residential&quot;,
&quot;PW3&quot;, &quot;Marine &amp; Shore Power&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectCategorisation__c</fullName>
        <formula>TEXT(QuoteLink__r.ProjectCategorisation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Category S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <description>Quote Approval –-  Formula to display the name of the related Opportunity.</description>
        <formula>QuoteLink__r.OpportunityName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLink__c</fullName>
        <description>Quote Approval - Master-detail relationship between Project Information and Quote Link for Bid Approval</description>
        <label>Quote Link</label>
        <referenceTo>OPP_QuoteLink__c</referenceTo>
        <relationshipLabel>Project Information</relationshipLabel>
        <relationshipName>RIT_ProjectInformation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>QuoteValidityPeriodDays__c</fullName>
        <inlineHelpText>Quote = Bid = Tender</inlineHelpText>
        <label>Quote validity period (days)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>&gt;180</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RITEIssuingDate__c</fullName>
        <description>Quote Approval –- Formula to display the Bid Issue Date of the related Quote Link.</description>
        <formula>QuoteLink__r.BidIssueDate__c</formula>
        <label>Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrationCode__c</fullName>
        <description>Quote Approval –Registration Code for Project Information.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Registration Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SEMemberOfAConsortium__c</fullName>
        <description>Quote Approval – SE Member Of A Consortium for Project Information.</description>
        <label>Is SE Member of a Consortium?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEPositionInTheProject__c</fullName>
        <description>Quote Approval –SE Position In The Project for Project Information.</description>
        <label>SE Position In The Project?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Equip./Soft or Service supplier</fullName>
                </value>
                <value>
                    <fullName>Full scope supplier</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>Consortium partner</fullName>
                </value>
                <value>
                    <fullName>Consortium Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolutionCenter__c</fullName>
        <formula>QuoteLink__r.OpportunityName__r.SolutionCtr__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfContract__c</fullName>
        <description>Quote Approval –Type Of Contract for Project Information.</description>
        <label>Contract Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Product delivery</fullName>
                </value>
                <value>
                    <fullName>Equipment Delivery</fullName>
                </value>
                <value>
                    <fullName>Package Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery + Commiss./ short site services</fullName>
                </value>
                <value>
                    <fullName>Del.+ erect + commiss./ long site services</fullName>
                </value>
                <value>
                    <fullName>Operation and maintenance services</fullName>
                </value>
                <value>
                    <fullName>Control/ monitoring/ simulation software</fullName>
                </value>
                <value>
                    <fullName>Software licenses</fullName>
                </value>
                <value>
                    <fullName>Process Control &amp; Safety Systems &amp; Serv.</fullName>
                </value>
                <value>
                    <fullName>Turnkey with automation/software</fullName>
                </value>
                <value>
                    <fullName>Turnkey with civil work</fullName>
                </value>
                <value>
                    <fullName>Turnkey with automation and civil work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfOffer__c</fullName>
        <formula>TEXT(QuoteLink__r.TypeOfOffer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Of Offer</label>
        <type>Text</type>
    </fields>
    <label>Project Information</label>
    <nameField>
        <displayFormat>RIT-PRI-{0000}</displayFormat>
        <label>Project Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PRI_VR01_CheckQuoteStatus</fullName>
        <active>true</active>
        <description>Quote Approval - To ensure that information is not edited after Quote Approval</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(Text(QuoteLink__r.QuoteStatus__c) = &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>RITE Information cannot be modified now, as the Quote is Approved</errorMessage>
    </validationRules>
</CustomObject>